# Frometon-Engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  b  c  compile.sh  download_libs.sh  install_base.sh
modules/: CMakeLists.txt
modules/imgui-cmake/: CMakeLists.txt
res/: multisquare.mtl
src/: CMakeLists.txt  CShape.cpp  CShape.h  MShape.cpp  MShape.h  PerlinNoise.hpp  QuadTree.h  SControls.cpp  SControls.h  SGUI.cpp  SGUI.h  SubShape.cpp  SubShape.h  SubTexture.cpp  SubTexture.h  controls.cpp  controls.h  cubemap.fs  cubemap.vs  imgui  lel.fs  lol.vs  main.cpp  scatter_fragment.glsl  scatter_vertex.glsl  shader.cpp  shader.h
